--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Raport/BukuPenghubung-Kelompok1</string>
+    <string name="app_name">Raport Online</string>
     <string name="action_settings">Setting</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
